--- a/scss/style.scss
+++ b/scss/style.scss
@@ -166,23 +166,42 @@ body{
     }
 
     .header-card{
-        display: none;
+        .main{
+            display: none;
+        }
     }
 
     .header-menu{
         z-index: 3;
         display: flex;
         height: 265px;
-        position: relative;
+        position: absolute;
+        top: 0;
+        width: 100%;
 
         .list-conteiner{
             margin: 0 auto;
-            width: 35%;
+            width: 30%;
             height: 100%;
             display: flex;
             flex-direction: column;
             justify-content: space-around;
-            align-items: center;
+            text-align: center;
+
+            ul {
+                    padding: 7px 0;
+                    width: 80%;
+                    border: 2px solid #4facfe;
+                    border-radius: 18px;
+                    margin-right: 3px;
+
+                    color: #fff;
+                    font-size: 0.8rem;
+                    text-transform: uppercase;
+                    letter-spacing: 1px;
+                    font-weight: 600;
+                
+            }
         }
     }   
 
