--- a/scss/style.scss
+++ b/scss/style.scss
@@ -189,6 +189,393 @@ body{
             text-align: center;
 
             ul {
+@import '../node_modules/bootstrap/scss/bootstrap.scss';
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,800;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
+
+$green: #038C33;
+$black: #0D0D0D;
+$green-light: #05F240;
+$green-dark: #01260E;
+$green-gradient: #025920;
+
+$background-color: #efefef;
+$blue: #4facfe;
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html{
+    font-size: 16px;
+}
+
+body{
+    font-family: 'Poppins', sans-serif;
+    background-color: $background-color;
+}
+
+.canva{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: url('/img/background2.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: lighten;
+}
+
+.profile-card{
+    position: relative;
+    width: 600px;
+    //background-color: #fff;
+    //border-radius: 5px;
+    //box-shadow: 0 5px 15px 1px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    //glassmorphism
+    background: rgba( 255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+
+    &::before{
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 270px;
+        top: 0;
+        left: 0;
+        background-image: linear-gradient(to top, #00f2fe, #4facfe);
+        clip-path: circle(400px at 50% -48.5%);
+    }
+
+    .header-card{
+        position: relative;
+        height: 265px; //DA ONDE O CARA TIROU ISSO??
+        margin: 1rem 2rem;
+
+        .mail{
+            position: absolute;
+            top: 0;
+            right: 0;
+            font-size: 1.5rem;
+            color: #fff;
+            opacity: .8;
+            transition: .3s;
+            z-index: 3;
+
+            &:hover{
+                opacity: 1;
+            }
+
+        }
+
+        .hamburger-menu{
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 3;
+
+            .menu{
+                font-size: 1.5rem;
+                color: #fff;
+                opacity: .8;
+                transition: .3s;
+
+                &:hover{
+                    opacity: 1;
+                }
+            }
+
+        }
+
+        .main{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            display: flex;
+            gap: 2px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            .image{
+                width: 110px;
+                height: 110px;
+                border-radius: 50%;
+                background: url(../img/junior.jpg);
+                background-position: center;
+                background-size: cover;
+                border: 4px solid #00d8fe;
+                z-index: 3;
+                overflow: hidden;
+
+                .hover{
+                    font-size: 1.8em;
+                    background-color: rgba(79, 172, 254, 0.7);
+                    opacity: 0;
+                    transition: .3s;
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    cursor: pointer;
+
+                    &:hover{
+                        opacity: 1;
+                    }
+                }
+
+            }
+
+            .name{
+                font-size: 1.2rem;
+                color: #fff;
+                line-height: 1;
+                font-weight: 500;
+                margin: 5px 0;
+            }
+
+            .sub-name{
+                font-family: 'Cutive Mono', monospace;
+                font-size: 1.2rem;
+                color: #fff;
+                opacity: .8;
+            }
+
+        }
+
+    }
+
+    .header-card{
+        .main{
+            display: none;
+        }
+    }
+
+    .header-menu{
+        z-index: 3;
+        display: flex;
+        height: 265px;
+        position: absolute;
+        top: 0;
+        width: 100%;
+
+        .list-conteiner{
+            margin: 0 auto;
+            width: 30%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            text-align: center;
+
+            ul {    
+                    //glassmorphism
+                    background: rgba(24, 16, 16, 0.50);
+                    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+                    backdrop-filter: blur( 4px );
+                    -webkit-backdrop-filter: blur( 4px );
+                    border-radius: 10px;
+                    border: 1px solid rgba( 255, 255, 255, 0.18 );
+
+                    padding: 7px 0;
+                    width: 80%;
+                    margin-right: 3px;
+
+                    color: #fff;
+                    font-size: 0.8rem;
+                    text-transform: uppercase;
+                    letter-spacing: 1px;
+                    font-weight: 600;
+                
+            }
+        }
+    }   
+
+    .content{
+
+        display: flex;
+        padding: 1.7rem 2.5rem 2.6rem 2.5rem;
+        background: transparent;
+
+        .left{
+            .about-container{
+                .title{
+                    position: relative;
+                    //color: rgb(53, 53, 53);
+                    color: #fff;
+                    font-weight: 500;
+                    font-size: 1.1rem;
+                    padding: 0 0 3px 0;
+                    margin-bottom: .9rem;
+                    display: inline-block;
+                    z-index: 1;
+
+                    &::after{
+                        content: '';
+                        position: absolute;
+                        height: 3px;
+                        width: 50%;
+                        background-color: rgb(53, 53, 53);
+                        bottom: 0;
+                        left: 0;
+                    }
+                }
+
+                .text{
+                    //color: #666;
+                    color: #fff;
+                    font-weight: 300;
+                    line-height: 1.7rem;
+                }
+            }
+
+            .icons-container{
+                padding: 1rem 0;
+
+                .icon{
+                    text-decoration: none;
+                    color: #4facfe;
+                    margin-right: 8px;
+                    font-size: 1.3rem;
+                    transition: .3s;
+
+                    &:hover{
+                        color: #3f3f3f; 
+                    }
+                }
+            }
+
+            .buttons-container{
+                display: flex;
+                margin-top: 5px;
+                padding: 0;
+                
+                .follow-button, .share-button{
+                    flex: 4;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    transform: .5s;
+
+                    &:hover{
+                        flex: 5;
+                    }
+                }
+
+
+                .follow-button{
+                    padding: 9px 0;
+                    width: 80%;
+                    border-radius: 18px;
+                    margin-right: 3px;
+                    background: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+
+                    .follow{
+                        text-align: center;
+                        color: #fff;
+                        text-decoration: none;
+                        font-size: .7rem;
+                        text-transform: uppercase;
+                        letter-spacing: 1px;
+                        font-weight: 600;
+                    }
+                }
+
+                .share-button{
+                    padding: 7px 0;
+                    width: 80%;
+                    border: 2px solid #4facfe;
+                    border-radius: 18px;
+                    margin-right: 3px;
+
+                    .share{
+                        text-align: center;
+                        //color: #4facfe;
+                        color: #fff;
+                        text-decoration: none;
+                        font-size: .7rem;
+                        text-transform: uppercase;
+                        letter-spacing: 1px;
+                        font-weight: 600;
+                    }
+                }
+
+            }
+
+        }
+
+        .right{
+            display: flex;
+            flex-direction: column;
+            text-align: right;
+            align-items: flex-end;
+            justify-content: space-between;
+            margin-left: 2.1rem;
+            z-index: 1;
+            padding-top: 1.5rem;
+
+            .number-circle{
+
+                .number{
+                    font-size: 2.1rem;
+                    font-weight: 200;
+                    color: #3f3f3f;
+                    line-height: 1.2;
+    
+                }
+
+                .number-title{
+                    font-size: .55rem;
+                    //color: #333;
+                    color: #fff;
+                    margin: 0 0 3px 0;
+                    font-weight: 400;
+                    line-height: 1;
+                    letter-spacing: 1px;
+                }
+            }
+        }
+
+        &::before{
+            content: 'Junior';
+            position: absolute;
+            top:50%;
+            left: 0%;
+            font-size: 7.3rem;
+            font-weight: 800;
+            z-index: 0;
+            opacity: 0.1;
+            color: #0D0D0D;
+        }
+
+    }
+
+}
+
+
+
+
+@media (min-width: 640px){
+
+}
+
+@media (min-width: 920px){
+
+}
+
+
+
                     padding: 7px 0;
                     width: 80%;
                     border: 2px solid #4facfe;
