--- a/css/style.css
+++ b/css/style.css
@@ -10768,7 +10768,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: url("/img/background2.svg");
+  background: url("../img/background2.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
