--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,7 +31,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('/img/background1.svg');
+    background: url('../img/background2.svg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -68,6 +68,7 @@ body{
         position: relative;
         height: 265px; //DA ONDE O CARA TIROU ISSO??
         margin: 1rem 2rem;
+        z-index: 4;
 
         .mail{
             position: absolute;
@@ -104,7 +105,7 @@ body{
 
         }
 
-        .main{
+        .main-header{
             position: absolute;
             width: 100%;
             height: 100%;
@@ -172,14 +173,14 @@ body{
     }
 
     .header-menu{
-        z-index: 3;
-        display: flex;
+        display: none;
         height: 265px;
         position: absolute;
-        top: 0;
-        width: 100%;
+        background-color: #01260E;
 
         .list-conteiner{
+            z-index: 3;
+
             margin: 0 auto;
             width: 30%;
             height: 100%;
